# python-libc

./: LICENSE  README.md  example.py  setup.cfg  setup.py
.github/workflows/: python-package.yml
libc/: __init__.py  libc.py
tests/: test_libc.py
