[metadata]
name = python-libc
author = kumattau
author_email = kumattau@gmail.com
description = A python raw libc bindings
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
url = https://github.com/kumattau/python-libc

[options]
packages = find:
